# agi-evals

./: CONTRIBUTING.md  GAME_INTERFACE.md  pyproject.toml
arena/: __init__.py  config.py  registry.py  server.py
arena/leaderboard/: __init__.py  __main__.py  data.py  display.py
arena/llm/: __init__.py  llm_agent.py  manual_agent.py
arena/orchestration/: __init__.py  runner.py  state.py
arena/storage/: __init__.py
catan_arena/: __init__.py  cli.py  config.py
catan_arena/adapters/: __init__.py  base.py  board_renderer.py  catan_action_parser.py  catan_state_adapter.py
catan_arena/envs/: __init__.py  catan_pettingzoo.py
catan_arena/llm/: __init__.py  player.py  providers.py
catan_arena/orchestration/: __init__.py  graph.py  nodes.py  runner.py  state.py
catan_arena/storage/: __init__.py  game_log.py
catan_arena/web/: __init__.py  arena_api.py  server.py
core/: __init__.py  action_parser.py  agent.py  game.py  state_adapter.py
docs/: CATAN_ARENA_TDD.md
examples/: arena_quickstart.py  demo_turn.py  manual_play.py
games/: __init__.py
games/avalon/: __init__.py  action_parser.py  baseline_agents.py  config.py  game.py  prompts.py  roles.py  state_adapter.py
games/catan/: __init__.py  action_parser.py  config.py  state_adapter.py
games/codenames/: __init__.py  action_parser.py  config.py  game.py  prompts.py  state_adapter.py  words.py
games/simple_card/: __init__.py  action_parser.py  config.py  game.py  state_adapter.py
tests/: test_avalon.py  test_avalon_baseline.py
ui/: index.html  vite.config.ts
ui/src/: App.test.tsx  App.tsx
(+33 files in other folders)
